<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jugadores">

    <TextView
        android:id="@+id/textJugador1"
        android:layout_width="233dp"
        android:layout_height="98dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/jugador1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/puntos1"
        android:layout_width="306dp"
        android:layout_height="94dp"
        android:background="#0000CF"
        android:gravity="center"
        android:text="@string/puntos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textJugador1"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/jugador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tirar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntos1"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textJugador2"
        android:layout_width="254dp"
        android:layout_height="92dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/jugador2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugador1"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/puntos2"
        android:layout_width="302dp"
        android:layout_height="95dp"
        android:background="#006C04"
        android:gravity="center"
        android:text="@string/puntos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textJugador2"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/jugador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tirar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntos2"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>